--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,8 @@
             <div id="player-turn"></div>
             <div id="game-phase"></div>
             <div class="piece-counts">
-                <div>White pieces: <span id="white-count">9</span></div>
-                <div>Black pieces: <span id="black-count">9</span></div>
+                <div> <span id="white-count">9</span></div>
+                <div> <span id="black-count">9</span></div>
             </div>
         </div>
         <div class="board">
